# ubicity

./: .dockerignore  .gitignore  .tool-versions  ABI-FFI-README.md  ACCESSIBILITY.md  API.md  ARCHITECTURE_V3.md  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  DENO_MIGRATION_PREVIEW.md  DEVELOPMENT_SUMMARY.md  ECOSYSTEM.scm  EXPLAINME.adoc  GETTING_STARTED.md  Justfile  MAINTAINERS.adoc  MANUAL_REVIEW_NEEDED.md  META.scm  MIGRATION.md  MIGRATION_V3.md  MINIMAL_VIABLE_PROTOCOL.md  PALIMPSEST.adoc  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  QUICK_START.md  README.adoc  RELEASE_PROCESS.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RSR_COMPLIANCE.md  RSR_OUTLINE.adoc  SECURITY.md  STACK_ANALYSIS.md  STATE.scm  (+28 more)
.claude/: CLAUDE.md
.github/: COMMIT_SIGNING.md  dependabot.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.well-known/: dc.xml  security.txt
benchmarks/: io.bench.ts  mapper.bench.ts  validation.bench.ts
docs/: API.md  CITATIONS.adoc  tech-debt-2026-05-26.md
examples/: api-usage.js  populate-examples.js
scripts/: benchmark.js  cleanup.js  migrate-data.js
src-rescript/: Analysis.res  Analysis.res.js  Export.res  (+17 more)
wasm/: Cargo.toml
wasm/.clusterfuzzlite/: Containerfile  build.sh  project.yaml
wasm/fuzz/: Cargo.toml
wasm/fuzz/fuzz_targets/: fuzz_validator.rs
wasm/src/: lib.rs
(+93 files in other folders)
