# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "ubicity-wasm-fuzz"
version = "0.0.0"
authors = ["hyperpolymath"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "fuzz_validator"
path = "fuzz_targets/fuzz_validator.rs"
test = false
doc = false
bench = false
